# riot-collector

./: .gitignore
.github/workflows/: cloud_run.yaml  docker.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: db.py  main.py  scheduler.py
backend/app/core/: config.py  scheduler.py
backend/app/core/job_scripts/: __init__.py  patch_release.py
backend/app/crud/: __init__.py  champion.py  item.py  patch.py  perks.py  shard.py  summoner_spell.py
backend/app/routers/: champion.py  item.py  main.py  patch.py  perks.py  scheduler.py  shard.py  summoner_spell.py
backend/app/schema/: champion.py  item.py  patch.py  perks.py  shard.py  summoner_spell.py  utils.py
