[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Vishwa Elankumaran <vishwaa33400@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = "^2.9.1"
pydantic-settings = "^2.5.2"
apscheduler = "^3.10.4"
requests = "^2.32.3"
bs4 = "^0.0.2"
firebase-admin = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
